Installation now updates to latest version..
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Page/panelStart.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Page/panelStart.html.twig
@@ -36,7 +36,7 @@
             {{ h3Content|raw }}
         </h3>
         {% if panelParagraph is defined %}
-            <p>{{ panelParagraph|trans(panelParams) }}</p>
+            <p>{{ panelParagraph|trans(panelParams)|raw }}</p>
         {% endif %}
     </div>
     <div class="panel-body"{% if bodyAttr is defined %} {{ bodyAttr }}{% endif %}>
