--- a/src/Busybee/HomeBundle/Resources/views/Popup/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Popup/template.html.twig
@@ -9,7 +9,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{{ get_setting('org.name', 'Busybee') }} - {% block title %}{% endblock title %} on Busybee</title>
+    <title>{{ get_setting('org.name.long', 'Busybee') }} - {% block title %}{% endblock title %} on Busybee</title>
 
     {% block stylesheets %}
         {% include 'BusybeeHomeBundle:Popup:style.html.twig' %}
