Changes to People Display to allow student search on grade.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Scripts/fadeAlert.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/fadeAlert.html.twig
@@ -1,5 +1,6 @@
-<script>
+<script type="text/javascript" language="JavaScript">
     if ( $(".fadeAlert").length ) {
         $(".fadeAlert").fadeOut(3000);
     }
 </script>
+<!-- fadeAlaert -->
