--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@
 {% if form_array is not defined %}
     {% set form_array = [] %}
 {% endif %}
-{% set form_array = form_array|merge({'attr': {'id': pagination.getName|lower ~ '_pagination'}}) %}
+{% set form_array = form_array|merge({'attr': {'id': pagination.getIdName|lower}}) %}
 
 {% if pagination.getReDirect != false %}
     <script>
