--- a/web/css/main.css
+++ b/web/css/main.css
@@ -368,7 +368,11 @@ button.btn.btn-header {
     border-radius: 8px;
     margin-bottom: -1px;
 }
-
 .startHidden {
     display: none;
+}
+
+.acknowledgement .alert {
+    padding: 0 15px;
+    margin-bottom: 0;
 }
