--- a/src/Busybee/TimeTableBundle/Resources/views/Line/manage.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Line/manage.html.twig
@@ -17,7 +17,7 @@
 
 {% block contentContainer %}
     {{ all_form_errors(fullForm, "div", "alert alert-danger fadeAlert") }}
-    {{ form_start(form) }}
+    {{ form_start(form, {attr:{id: 'line_form'}}) }}
     {% set route = {} %}
     {% if app.request.get('closeWindow') is not empty %}
         {% set h3Content = closeButton({mergeClass: 'disableOnChange'})|raw %}
@@ -103,4 +103,15 @@
         })
     </script>
     {% include '@BusybeeHome/Scripts/fadeAlert.html.twig' %}
+    {% if app.request.get('closeWindow') is not empty %}
+        <script type="application/javascript" language="JavaScript">
+            $('#line_form').submit(function (event) {
+                var path = '{{ path('line_manage', {id: '__id__', closeWindow: '_closeWindow'}) }}';
+                path = path.replace('__id__', '{{ app.request.get('id') }}');
+
+                $(this).attr('action', path);
+                return true;
+            });
+        </script>
+    {% endif %}
 {% endblock javascripts %}
