--- a/src/Busybee/HomeBundle/Resources/views/Default/flashSplit.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/flashSplit.html.twig
@@ -3,9 +3,17 @@
 {% if theMessage is not empty %}
     {% if theMessage is iterable %}
         {% for message,parameters in theMessage %}
-            {{ message|trans(parameters) }}
+            {% if showFlash(message|trans(parameters)) %}
+                <div class="alert alert-{{ level }}{{ flashClass }}" role="alert">
+                    {{ message|trans(parameters) }}
+                </div>
+            {% endif %}
         {% endfor %}
     {% else %}
-        {{ theMessage|trans }}
+        {% if showFlash(theMessage|trans) %}
+            <div class="alert alert-{{ level }}{{ flashClass }}" role="alert">
+                {{ theMessage|trans }}
+            </div>
+        {% endif %}
     {% endif %}
 {% endif %}
